# ValueBetting

./: .env.example  .gitignore  bot.py  pyproject.toml
config/: __init__.py  categories.py  settings.py
core/: classifier.py  consensus.py  edge.py  exit_engine.py  market.py  matcher.py
dashboard/: logger.py  terminal.py  web.py
estimators/: ai_ensemble.py  base.py  cross_market.py  crypto.py  geopolitical.py  registry.py  sports.py  weather.py
execution/: executor.py  position_sizer.py  risk_manager.py
ml/: calibration.py  edge_decay.py  trade_scorer.py
sources/: acled.py  base.py  gdelt.py  icews.py  manifold.py  metaculus.py  odds_api.py  polymarket.py  sentiment.py  weather.py
