[project]
name = "valuebetting"
version = "0.1.0"
description = "Multi-category value betting engine for Polymarket"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "requests>=2.31",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
live = [
    "py-clob-client>=0.34",
    "web3>=7.0",
    "eth-account>=0.13",
    "websockets>=12.0",
]
